--- a/src/Client.Console/Client.Console.csproj
+++ b/src/Client.Console/Client.Console.csproj
@@ -3,8 +3,7 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>net5.0</TargetFramework>
-<!--        todo: uncoment it in the end-->
-        <!--<RootNamespace>GroupChat.Client.Console</RootNamespace>-->
+        <RootNamespace>GroupChat.Client.Console</RootNamespace>
     </PropertyGroup>
 
 </Project>
