reorg code by namespaces

--- a/src/Client.Console/Client.Console.csproj
+++ b/src/Client.Console/Client.Console.csproj
@@ -6,4 +6,9 @@
         <RootNamespace>GroupChat.Client.Console</RootNamespace>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Implementations\Implementations.csproj" />
+      <ProjectReference Include="..\Wrappers\Wrappers.csproj" />
+    </ItemGroup>
+
 </Project>
