--- a/src/Implementations/Implementations.csproj
+++ b/src/Implementations/Implementations.csproj
@@ -8,6 +8,7 @@
     <ItemGroup>
       <ProjectReference Include="..\Constants\Constants.fsproj" />
       <ProjectReference Include="..\Domain\Domain.fsproj" />
+      <ProjectReference Include="..\Extensions\Extensions.csproj" />
       <ProjectReference Include="..\Interfaces\Interfaces.csproj" />
     </ItemGroup>
 
