some edits; get started with implementation

--- a/src/Implementations/Implementations.csproj
+++ b/src/Implementations/Implementations.csproj
@@ -10,6 +10,7 @@
       <ProjectReference Include="..\Domain\Domain.fsproj" />
       <ProjectReference Include="..\Extensions\Extensions.csproj" />
       <ProjectReference Include="..\Interfaces\Interfaces.csproj" />
+      <ProjectReference Include="..\Wrappers\Wrappers.csproj" />
     </ItemGroup>
 
 </Project>
