--- a/src/Client.Console/Client.Console.csproj
+++ b/src/Client.Console/Client.Console.csproj
@@ -3,12 +3,11 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>net5.0</TargetFramework>
-        <RootNamespace>GroupChat.Client.Console</RootNamespace>
+        <RootNamespace>GroupChat.Console</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Implementations\Implementations.csproj" />
-      <ProjectReference Include="..\Wrappers\Wrappers.csproj" />
+      <ProjectReference Include="..\Client\Client.csproj" />
     </ItemGroup>
 
 </Project>
